# copilot-agents

./: .editorconfig  .gitignore  .tool-versions  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM-PYTHON.md  LLM.md  README.md  git-conventional-commits.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/chatmodes/: docs writer.chatmode.md  python.chatmode.md
deploy/: LLM.md  docker-compose.yaml  litellm-config.yaml
src/: LLM.md
src/copilot_agents/: __init__.py
